[package]
name = "rust_site"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
env_logger = "0.9.0"
log = "0.4"
actix-redis = "0.10"
actix-session = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"